--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/FilimonovAlexey/express-mesto-gha.git"
   },
-  "author": "",
+  "author": "Filimonov Alexey",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/FilimonovAlexey/express-mesto-gha/issues"
@@ -28,7 +28,6 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "mongoose": "^6.3.6",
-    "uuid": "^9.0.0"
+    "mongoose": "^6.3.6"
   }
 }
