--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.6"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.6",
+    "validator": "^13.7.0"
   }
 }
